<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pulse_preferences">
        <EditTextPreference
            android:defaultValue="@string/pulse_host"
            android:dialogTitle="@string/dialog_title_pulse_host_preference"
            android:key="pulse_host"
            android:summary="@string/pulse_host"
            android:title="@string/title_pulse_host_preference" />
        <EditTextPreference
            android:defaultValue="@string/pulse_port"
            android:dialogTitle="@string/dialog_title_pulse_port_preference"
            android:inputType="numberDecimal"
            android:key="pulse_port"
            android:summary="@string/pulse_port"
            android:title="@string/title_pulse_port_preference" />
    </PreferenceCategory>

</PreferenceScreen>