<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_more"
        android:icon="?attr/ic_action_more"
        android:orderInCategory="100"
        android:title="@string/menu_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_install"
                android:orderInCategory="100"
                android:title="@string/menu_install"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_configure"
                android:orderInCategory="100"
                android:title="@string/menu_configure"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_export"
                android:orderInCategory="100"
                android:title="@string/menu_export"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_status"
                android:orderInCategory="100"
                android:title="@string/menu_status"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_clear"
                android:orderInCategory="100"
                android:title="@string/menu_clear"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>