<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_margin="@dimen/logger_view_border"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:focusable="false">

        <TextView
            android:id="@+id/outputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:typeface="monospace" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/color_toolbar_border"
        android:baselineAligned="false"
        android:paddingTop="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:baselineAligned="false"
            android:weightSum="1">

            <Button
                android:id="@+id/startButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:drawableLeft="?attr/ic_action_start"
                android:onClick="containerStart"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:text="@string/menu_start" />

            <Button
                android:id="@+id/stopButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:drawableLeft="?attr/ic_action_stop"
                android:onClick="containerStop"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:text="@string/menu_stop" />

            <ImageButton
                android:id="@+id/propertiesButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:contentDescription="@string/menu_properties"
                android:onClick="containerProperties"
                android:src="?attr/ic_action_properties" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>